# Ctrlx-Core-RT-Example

./: .editorconfig  .gitignore  CMakeLists.txt  build-debug.sh  build-snap-amd64.sh  build-snap-arm64.sh  readme.md  setup.sh
snap/: snapcraft.yaml
source/User/: EtherCATUpdates.cpp  EtherCATUpdates.h  readme.md  tickUpdates.cpp  tickUpdates.h
source/bundle/: CMakeLists.txt  activator.cpp  cmp.cpp  cmp.h
source/common.log.trace/: trace_itf_wrapper.cpp  trace_itf_wrapper.h  trace_itf_wrapper_template.cpp  trace_itf_wrapper_template.h
source/impl/: CMakeLists.txt  Logger.h  Trace.h  rt_application.cpp  rt_application.h  rt_applicationFactory.cpp  rt_applicationFactory.h  trace.h  trace_.cpp
